sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Group__mdt/SFDC_Industry_Assessment_Question_Group__mdt.object-meta.xml
<CustomObject>
    <description>Used to categorize questions for easy user navigation and organization</description>
    <label>SFDC Industry Assessment Question Group</label>
    <pluralLabel>SFDC Industry Assessment Question Groups</pluralLabel>
</CustomObject>