sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Group__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <referenceTo>SFDC_Industry__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Assessment Question Groups</relationshipLabel>
    <relationshipName>SFDC_Industry_Assessment_Question_Groups</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>