sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Group__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>