sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Assessment_Question_Group__mdt/listViews/All_Groups.listView-meta.xml
<ListView>
    <fullName>All_Groups</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Industry__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Vertical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Groups</label>
    <language>en_US</language>
</ListView>